Fixing encoding in h2 console (UTF-8)

--- a/sport_mates/src/main/resources/application.properties
+++ b/sport_mates/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.platform=h2
-spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
+spring.datasource.sqlScriptEncoding=UTF-8
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
