--- a/sportmates_frontend/app/src/main/AndroidManifest.xml
+++ b/sportmates_frontend/app/src/main/AndroidManifest.xml
@@ -16,15 +16,17 @@
             android:label="@string/sportmates_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".controller.ProfileActivity"
-            android:label="@string/sportmates_profile"/>
+            android:label="@string/sportmates_profile" />
         <activity
             android:name=".controller.EventActivity"
-            android:label="@string/sportmates_my_events"></activity>
+            android:label="@string/sportmates_my_events" />
+        <activity android:name=".controller.EventDetailsActivity"></activity>
     </application>
 
 </manifest>
