--- a/sportmates_frontend/app/src/main/AndroidManifest.xml
+++ b/sportmates_frontend/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         <activity
             android:name=".controller.MainActivity"
             android:label="@string/sportmates_main">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".controller.ProfileActivity"
@@ -24,14 +27,20 @@
         <activity
             android:name=".controller.EventActivity"
             android:label="@string/sportmates_my_events" />
-        <activity android:name=".controller.EventDetailsActivity"></activity>
-        <activity android:name=".controller.LoginActivity"
-                android:label="@string/sportmates_login">
+        <activity android:name=".controller.EventDetailsActivity" />
+        <activity
+            android:name=".controller.LoginActivity"
+            android:label="@string/sportmates_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".controller.RegistrationActivity"
+            android:label="@string/sportmates_registration">
+        </activity>
+
     </application>
 
 </manifest>
